Set header to fixed and added overflow:scroll to main

--- a/MyTimes/resources/style.css
+++ b/MyTimes/resources/style.css
@@ -15,6 +15,7 @@
   align-items: center;
   border-bottom: 1px solid black;
   padding: 5px 5px;
+  position: fixed;
  }
 
 .logo{
@@ -28,6 +29,8 @@
 }
  .main {
    display: flex;
+   border: 2px solid black;
+   overflow: scroll;
  }
 
 .large{
